adding notebook for scratch work with df and nb libraries

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ dependencies = [
     "dash==2.14.2",
     "dash-bootstrap-components==1.5.0",
     "gunicorn==21.2.0",
+    "ipykernel>=7.1.0",
+    "nbformat>=5.10.4",
     "pandas==2.1.4",
     "plotly==5.18.0",
 ]
